[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://UI/Dialogs/TextInputDialog.gd" id="1"]

[node name="TextInputDialog" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "TEXT_INPUT_DIALOG_LABEL"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "TEXT_INPUT_DIALOG_PLACEHOLDER"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "TEXT_INPUT_DIALOG_CONFIRM"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "TEXT_INPUT_DIALOG_CANCEL"
